[gd_scene format=3 uid="uid://bi7okprx54aby"]

[ext_resource type="Script" uid="uid://iog776uom8nl" path="res://scripts/game.gd" id="1_vtaks"]
[ext_resource type="PackedScene" uid="uid://p4t01rmimlig" path="res://scenes/npc_character.tscn" id="3_lnu2h"]
[ext_resource type="SpriteFrames" uid="uid://ch2waandkedv4" path="res://resources/sprite_frames/skins/mob_boss.tres" id="3_u5sy4"]
[ext_resource type="SpriteFrames" uid="uid://y08gke151q38" path="res://resources/sprite_frames/skins/blue_suit.tres" id="4_gee14"]
[ext_resource type="PackedScene" uid="uid://cyna8h07wstaf" path="res://scenes/mask/fox_mask.tscn" id="4_lbhrr"]
[ext_resource type="SpriteFrames" uid="uid://dlb6at1me6y6i" path="res://resources/sprite_frames/skins/red_dress.tres" id="5_0tnpc"]
[ext_resource type="SpriteFrames" uid="uid://duvrnheasiag2" path="res://resources/sprite_frames/skins/black_suit.tres" id="6_vtaks"]
[ext_resource type="PackedScene" uid="uid://c078x6obfe1uv" path="res://scenes/mask/cat_mask.tscn" id="7_hnppa"]
[ext_resource type="PackedScene" uid="uid://csnd72up75dp3" path="res://scenes/mask/clown_mask.tscn" id="8_41cje"]
[ext_resource type="PackedScene" uid="uid://fe04lx08pprm" path="res://scenes/player_character.tscn" id="9_0tnpc"]
[ext_resource type="PackedScene" uid="uid://vmw5c4y8my8f" path="res://scenes/mask/deer_mask.tscn" id="9_h7eg2"]
[ext_resource type="PackedScene" uid="uid://dtr27uoj7x05g" path="res://scenes/mask/owl_mask.tscn" id="11_ejohc"]
[ext_resource type="Shader" uid="uid://c2vdhk2roar45" path="res://resources/shaders/spotlight.gdshader" id="11_ojwvf"]
[ext_resource type="PackedScene" uid="uid://hdrftrspe301" path="res://scenes/mask/rabbit_mask.tscn" id="12_64kk8"]
[ext_resource type="PackedScene" uid="uid://ckn8trj0hewsk" path="res://scenes/mask/troll_mask.tscn" id="13_o6psv"]
[ext_resource type="PackedScene" uid="uid://cl2e22x15c8lq" path="res://scenes/mask/wolf_mask.tscn" id="14_p7exr"]
[ext_resource type="Script" uid="uid://okem3v4rp2nv" path="res://scripts/masked_character_spawner.gd" id="15_41cje"]
[ext_resource type="PackedScene" path="res://scenes/mansion.tscn" id="17_hnppa"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_lnu2h"]
vertices = PackedVector2Array(684, 268, 684, 140, 980, 140, 980, 500, 684, 500, 684, 404, 468, 268, 468, 404, 140, 140, 468, 500, 140, 500, 468, 140)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(3, 4, 5), PackedInt32Array(0, 3, 5, 6), PackedInt32Array(6, 5, 7, 8), PackedInt32Array(7, 9, 10, 8), PackedInt32Array(11, 6, 8)])
outlines = Array[PackedVector2Array]([PackedVector2Array(69, 72, 63, 575, 1056, 571, 1052, 66)])
parsed_geometry_type = 1
parsed_collision_mask = 4278190081
source_geometry_mode = 1
agent_radius = 12.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g6yuj"]
shader = ExtResource("11_ojwvf")
shader_parameter/radius = 0.10000000475

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hnppa"]

[node name="Round" type="Node2D" unique_id=445564108]
script = ExtResource("1_vtaks")
player_scene = ExtResource("9_0tnpc")
player_sprite_frames = Array[SpriteFrames]([ExtResource("6_vtaks"), ExtResource("5_0tnpc"), ExtResource("4_gee14"), ExtResource("3_u5sy4")])
masks_scenes = Array[PackedScene]([ExtResource("7_hnppa"), ExtResource("8_41cje"), ExtResource("9_h7eg2"), ExtResource("4_lbhrr"), ExtResource("11_ejohc"), ExtResource("12_64kk8"), ExtResource("13_o6psv"), ExtResource("14_p7exr")])

[node name="MaskedCharacterSpawner" type="MultiplayerSpawner" parent="." unique_id=374073348 node_paths=PackedStringArray("nav_region")]
unique_name_in_owner = true
spawn_path = NodePath("../ySorted")
script = ExtResource("15_41cje")
nav_region = NodePath("../NavigationRegion2D")
npc_scene = ExtResource("3_lnu2h")
player_scene = ExtResource("9_0tnpc")
skins_sprite_frames = Array[SpriteFrames]([ExtResource("6_vtaks"), ExtResource("4_gee14"), ExtResource("3_u5sy4"), ExtResource("5_0tnpc")])
masks_scenes = Array[PackedScene]([ExtResource("9_h7eg2")])

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="." unique_id=142268143]
unique_name_in_owner = true
navigation_polygon = SubResource("NavigationPolygon_lnu2h")

[node name="Background" parent="." unique_id=1410678110 instance=ExtResource("17_hnppa")]

[node name="ySorted" type="Node2D" parent="." unique_id=1020136872]
unique_name_in_owner = true
y_sort_enabled = true

[node name="HUD" type="CanvasLayer" parent="." unique_id=1036752382]

[node name="Spotlight" type="Control" parent="HUD" unique_id=23239340]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="HUD/Spotlight" unique_id=954878165]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 0

[node name="SpotlightPanel" type="PanelContainer" parent="HUD/Spotlight/AspectRatioContainer" unique_id=770059453]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_g6yuj")
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HUD" unique_id=654749174]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_hnppa")

[node name="MarginContainer" type="MarginContainer" parent="HUD/PanelContainer" unique_id=1779390122]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="PanelContainer" type="PanelContainer" parent="HUD/PanelContainer/MarginContainer" unique_id=204600514]
layout_mode = 2
size_flags_vertical = 8

[node name="RoleLabel" type="Label" parent="HUD/PanelContainer/MarginContainer/PanelContainer" unique_id=409776928]
layout_mode = 2
size_flags_horizontal = 0
text = "Role: Spy"

[node name="AbilityCooldown" type="Label" parent="HUD/PanelContainer/MarginContainer/PanelContainer" unique_id=646019072]
layout_mode = 2
size_flags_horizontal = 8
text = "Ability Cooldown"

[node name="RemainingSpies" type="Label" parent="HUD/PanelContainer/MarginContainer/PanelContainer" unique_id=2055225214]
layout_mode = 2
size_flags_horizontal = 4
text = "Spies Remaining: 1"
